update sigir tut

--- a/services/tools-meet-llm/index.html
+++ b/services/tools-meet-llm/index.html
@@ -31,8 +31,8 @@
 </head>
 <body>
   <nav class="llm-nav" >
-    <a class="llm-nav-item" href="#summary">Summary</a>
     <a class="llm-nav-item" href="#organizer">Organizer</a>
+    <a class="llm-nav-item" href="#summary">Summary</a>
     <a class="llm-nav-item" href="#schedule">Schedule</a>
     <a class="llm-nav-item" href="#resource">Resource</a>
   </nav>
@@ -40,39 +40,14 @@
 <div class="main-title">
   <div style="padding: 0 20px">
     <p style="color:#333;text-align:center;padding-top:40px;font-size:2.6em">Empowering Large Language Models: <br \> Tool Learning for Real-World Interaction</p>
-    <p style="color:#333;text-align:center;padding-top:20px;font-size:1.5em">SIGIR 2024 Tutorial </p>
+    <p style="color:#333;text-align:center;padding-top:20px;font-size:1.5em">SIGIR 2024 Tutorial, Washington D.C</p>
     <p style="color:#333;text-align:center;padding-top:10px;font-size:1.5em">14th, July 2024 </p>
   </div>
 </div>
 
 
-<section class="section" id="summary">
-  <div class="container is-max-desktop">
-    <!-- Abstract. -->
-    <div class="columns is-centered has-text-centered">
-      <div class="column is-four-fifths">
-        <h2 class="title is-3">Summary</h2>
-        <div class="content has-text-justified">
-          <p>
-            Since the advent of large language models (LLMs), the field of tool learning has remained very active in solving various tasks in practice, including but not limited to information retrieval. This half-day tutorial provides basic concepts of this field and an overview of recent advancements with several applications. In specific, we start with some foundational components and architecture of tool learning (i.e., cognitive tool and physical tool), and then we categorize existing studies in this field into tool-augmented learning and tool-oriented learning, and introduce various learning methods to empower LLMs this kind of capability. Furthermore, we provide several cases about when, what, and how to use tools in different applications. We end with some open challenges and several potential research directions for future studies. We believe this tutorial is suited for both researchers at different stages (introductory, intermediate, and advanced) and industry practitioners who are interested in LLMs and tool learning
-          </p>
-          
-          <p>
-            To the best of our knowledge, this is the first tutorial about tool learning based on LLMs. More detail can be found in original <a href="static/references/Tut_ToolsMeetLLM.pdf">proposal</a>.
-          </p>
-        </div>
-      </div>
-    </div>
-
-    <!--/ Abstract. -->
-
-    <!-- Paper video. -->
-    <!--/ Paper video. -->
-  </div>
-</section>
-
 <section class="section hero" id="organizer">
-  <h2 class="title is-3 is-centered has-text-centered">About US</h2>
+  <!-- <h2 class="title is-3 is-centered has-text-centered">About US</h2> -->
   <div class="organizer-container">
     <div class="organizer-item">
       <img width="150px" height="120px" src="static/imgs/profile_hongru.png">
@@ -101,6 +76,39 @@
     <span class="author-block"><sup>3</sup>Renmin University of China,</span>
     <span class="author-block"><sup>4</sup>The University of Edinburgh</span>
   </div>
+  <div class="university-logos">
+    <img src="./static/imgs/cuhk.png" alt="CUHK Logo" class="university-logo">
+    <img src="./static/imgs/tsinghua.png" alt="Tsinghua University Logo" class="university-logo">
+    <img src="./static/imgs/renmin.png" alt="Renmin University Logo" class="university-logo">
+    <img src="./static/imgs/uoe.png" alt="University of Edinburgh Logo" class="university-logo">
+  </div>
+</section>
+
+
+
+<section class="section" id="summary">
+  <div class="container is-max-desktop">
+    <!-- Abstract. -->
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">Summary</h2>
+        <div class="content has-text-justified">
+          <p>
+            Since the advent of large language models (LLMs), the field of tool learning has remained very active in solving various tasks in practice, including but not limited to information retrieval. This half-day tutorial provides basic concepts of this field and an overview of recent advancements with several applications. In specific, we start with some foundational components and architecture of tool learning (i.e., cognitive tool and physical tool), and then we categorize existing studies in this field into tool-augmented learning and tool-oriented learning, and introduce various learning methods to empower LLMs this kind of capability. Furthermore, we provide several cases about when, what, and how to use tools in different applications. We end with some open challenges and several potential research directions for future studies. We believe this tutorial is suited for both researchers at different stages (introductory, intermediate, and advanced) and industry practitioners who are interested in LLMs and tool learning
+          </p>
+          
+          <p>
+            To the best of our knowledge, this is the first tutorial about tool learning based on LLMs. More detail can be found in original <a href="static/references/Tut_ToolsMeetLLM.pdf">proposal</a>.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <!--/ Abstract. -->
+
+    <!-- Paper video. -->
+    <!--/ Paper video. -->
+  </div>
 </section>
 
 
@@ -111,10 +119,10 @@
     <div class="columns is-centered">
       <div class="column is-full-width">
         <h2 class="title is-3">Schedule</h2>
-        <p>
+        <!-- <p>
           Our tutorial will be held on July 14, 2024 at Washington D.C US on SIGIR 2024.
           <em>Slides may be subject to updates.</em>
-        </p>
+        </p> -->
 
         <div class="content has-text-justified">
 
@@ -146,15 +154,60 @@
               <td class="tg-0lax">Section 2: Foundations of Tool Learning</td>
               <td class="tg-0lax">Hongru Wang</td>
             </tr>
+             <tr>
+              <td class="tg-0lax"></td>
+              <td class="tg-0lax">Section 2.1: Definition and Scope of Tools</td>
+              <td class="tg-0lax"></td>
+            </tr>
+             <tr>
+              <td class="tg-0lax"></td>
+              <td class="tg-0lax">Section 2.2: Components and Architecture of Tool Learning</td>
+              <td class="tg-0lax"></td>
+            </tr>
             <tr>
               <td class="tg-0lax">14:25—15:00</td>
               <td class="tg-0lax">Section 3: Tool Learning based on LLMs</td>
               <td class="tg-0lax">Yujia Qin</td>
             </tr>
             <tr>
+              <td class="tg-0lax"></td>
+              <td class="tg-0lax">Section 3.1: Tool-oriented Learning</td>
+              <td class="tg-0lax"></td>
+            </tr>
+            <tr>
+              <td class="tg-0lax"></td>
+              <td class="tg-0lax">Section 3.2: Tool-augmented Learning</td>
+              <td class="tg-0lax"></td>
+            </tr>
+            <tr>
+              <td class="tg-0lax"></td>
+              <td class="tg-0lax">Section 3.3: "Learning" of Tool Learning</td>
+              <td class="tg-0lax"></td>
+            </tr>
+            <tr>
               <td class="tg-0lax">15:00—15:25</td>
               <td class="tg-0lax">Section 4: Application of Tool Learning</td>
               <td class="tg-0lax">Yujia Qin</td>
+            </tr>
+            <tr>
+              <td class="tg-0lax"></td>
+              <td class="tg-0lax">Section 4.1: Tool Creation, Selection and Utilization</td>
+              <td class="tg-0lax"></td>
+            </tr>
+            <tr>
+              <td class="tg-0lax"></td>
+              <td class="tg-0lax">Section 4.2: Tool Learning in Information Retrieval</td>
+              <td class="tg-0lax"></td>
+            </tr>
+            <tr>
+              <td class="tg-0lax"></td>
+              <td class="tg-0lax">Section 4.3: Tool Learning in Recommendation</td>
+              <td class="tg-0lax"></td>
+            </tr>
+            <tr>
+              <td class="tg-0lax"></td>
+              <td class="tg-0lax">Section 4.3: Tool Learning in Embodied Environment</td>
+              <td class="tg-0lax"></td>
             </tr>
             <tr>
               <td class="tg-0lax">15:25—15:30</td>
@@ -170,6 +223,21 @@
               <td class="tg-0lax">16:00—16:25</td>
               <td class="tg-0lax">Section 5: Advanced Topics and Future Directions</td>
               <td class="tg-0lax">Hongru Wang</td>
+            </tr>
+            <tr>
+              <td class="tg-0lax"></td>
+              <td class="tg-0lax">Section 5.1: Multi-modal and Multi-agent Tool Learning</td>
+              <td class="tg-0lax"></td>
+            </tr>
+            <tr>
+              <td class="tg-0lax"></td>
+              <td class="tg-0lax">Section 5.2: Safe, Trustworhy and Personalized Tool Learning</td>
+              <td class="tg-0lax"></td>
+            </tr>
+            <tr>
+              <td class="tg-0lax"></td>
+              <td class="tg-0lax">Section 5.3: Emerging Trends and Future Opportunities</td>
+              <td class="tg-0lax"></td>
             </tr>
             <tr>
               <td class="tg-0lax">17:10—17:20</td>
@@ -215,7 +283,7 @@
 <section id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>@article{ tools_meet_llm,
+    <pre><code>@article{tools_meet_llm,
         author    = { Hongru Wang, Yujia Qin, Yankai Lin, Jeff Z. Pan and Kam-fai Wong},
         title     = { SIGIR 2024 Tutorial: Empowering Large Language Models: Tool Learning for Real-World Interaction},
         journal   = { SIGIR 2024 },
