--- a/index.html
+++ b/index.html
@@ -230,6 +230,11 @@
       <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
       <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
       <a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/hongru-carrywang'});return false;">Schedule meeting with me!</a>
+
+
+      <br>
+      
+      <p style="color: red;">I am on track to graduate in June 2025. Currently, I'm actively seeking opportunities as a research scientist or postdoc / academic positions. Please don't hesitate to reach out!</p>
       <!-- Calendly link widget end -->
       
       <!-- <div class="row" style="margin-top:20px;">
