--- a/publication/index.html
+++ b/publication/index.html
@@ -168,6 +168,15 @@
 
                     <div class="pub-list-item" style="margin-bottom: 1rem">
                       <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+                      <a href="">OSPC: Detecting Harmful Memes with Large Language Model as a Catalyst</a> 
+                      <img src="https://img.shields.io/badge/LLM-orange"><br>
+                      <span class="author_list">Jingtao Cao, Zheng Zhang, <strong>Hongru WANG</strong>, Bin Liang, Hao Wang, Kam-fai Wong </span><br>
+                      <span><i>Online Safety Prize Challenge Champion, WWW 2024</i></span>
+                    </div>
+
+
+                    <div class="pub-list-item" style="margin-bottom: 1rem">
+                      <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
                       <a href="">Medical Dialogue: A Survey of Categories, Methods, Evaluation and Challenges</a> 
                       <img src="https://img.shields.io/badge/LLM-orange"><br>
                       <span class="author_list">Xiaoming Shi, Zeming Liu, Li Du, Yuxuan Wang,<strong>Hongru WANG</strong>, Yuhang Guo, Tong Ruan, JIE XU, Shaoting Zhang</span><br>
