--- a/services/tools-meet-llm/index.html
+++ b/services/tools-meet-llm/index.html
@@ -181,7 +181,7 @@
             </tr>
             <tr>
               <td class="tg-0lax"></td>
-              <td class="tg-0lax">Section 3.3: "Learning" of Tool Learning</td>
+              <td class="tg-0lax">Section 3.3: "Learning" of Tool Learning [Toolformer] [ToolLLM]</td>
               <td class="tg-0lax"></td>
             </tr>
             <tr>
@@ -197,11 +197,6 @@
             <tr>
               <td class="tg-0lax"></td>
               <td class="tg-0lax">Section 4.2: Tool Learning in Information Retrieval</td>
-              <td class="tg-0lax"></td>
-            </tr>
-            <tr>
-              <td class="tg-0lax"></td>
-              <td class="tg-0lax">Section 4.3: Tool Learning in Recommendation</td>
               <td class="tg-0lax"></td>
             </tr>
             <tr>
