--- a/services/tools-meet-llm/index.html
+++ b/services/tools-meet-llm/index.html
@@ -58,12 +58,16 @@
       <div> <a href="https://yujia-qin.github.io/" style="border-radius: 50%">Yujia Qin</a><sup>2</sup></div>
     </div>
     <div class="organizer-item">
+      <img width="150px" height="120px" src="static/imgs/profile_diji.png">
+      <div> <a href="https://dyang39.github.io/" style="border-radius: 50%">Diji Yang</a><sup>3</sup></div>
+    </div>
+    <div class="organizer-item">
       <img width="150px" height="120px" src="static/imgs/profile_yankai.png">
-      <div> <a href="https://linyankai.github.io/" style="border-radius: 50%">Yankai Lin</a><sup>3</sup></div>
+      <div> <a href="https://linyankai.github.io/" style="border-radius: 50%">Yankai Lin</a><sup>4</sup></div>
     </div>
     <div class="organizer-item">
       <img width="150px" height="120px" src="static/imgs/profile_jeff.png">
-      <div> <a href="https://knowledge-representation.org/j.z.pan/" style="border-radius: 50%">Jeff Z. Pan</a><sup>4</sup></div>
+      <div> <a href="https://knowledge-representation.org/j.z.pan/" style="border-radius: 50%">Jeff Z. Pan</a><sup>5</sup></div>
     </div>
     <div class="organizer-item">
       <img width="150px" height="120px" src="static/imgs/profile_kfwong.png">
@@ -73,8 +77,9 @@
   <div class="publication-authors">
     <span class="author-block"><sup>1</sup>The Chinese University of Hong Kong,</span>
     <span class="author-block"><sup>2</sup>Tsinghua University,</span>
-    <span class="author-block"><sup>3</sup>Renmin University of China,</span>
-    <span class="author-block"><sup>4</sup>The University of Edinburgh</span>
+    <span class="author-block"><sup>3</sup>UC Santa Cruz</span>
+    <span class="author-block"><sup>4</sup>Renmin University of China,</span>
+    <span class="author-block"><sup>5</sup>The University of Edinburgh</span>
   </div>
   <div class="university-logos">
     <img src="./static/imgs/cuhk.png" alt="CUHK Logo" class="university-logo">
@@ -187,7 +192,7 @@
             <tr>
               <td class="tg-0lax">15:00—15:25</td>
               <td class="tg-0lax">Section 4: Application of Tool Learning</td>
-              <td class="tg-0lax">Yujia Qin</td>
+              <td class="tg-0lax">Diji Yang</td>
             </tr>
             <tr>
               <td class="tg-0lax"></td>
