--- a/services/workshop/index.html
+++ b/services/workshop/index.html
@@ -65,8 +65,9 @@
                 <!-- <th scope="row">TR-7</th> -->
                 <td width="20%" style="text-align: center"><a href="https://rulegreen.github.io/" style="border-radius: 50%">Hongru Wang</a><sup>1</sup>,</td>
                 <td width="20%" style="text-align: center"><a href="https://yujia-qin.github.io/" style="border-radius: 50%">Yujia Qin</a><sup>2</sup>,</td>
-                <td width="20%" style="text-align: center"><a href="https://linyankai.github.io/" style="border-radius: 50%">Yankai Lin</a><sup>3</sup>,</td>
-                <td width="20%" style="text-align: center"><a href="https://knowledge-representation.org/j.z.pan/" style="border-radius: 50%">Jeff Z. Pan</a><sup>4</sup></td>
+                <td width="20%" style="text-align: center"><a href="https://dyang39.github.io/" style="border-radius: 50%">Diji Yang</a><sup>3</sup>,</td>
+                <td width="20%" style="text-align: center"><a href="https://linyankai.github.io/" style="border-radius: 50%">Yankai Lin</a><sup>4</sup>,</td>
+                <td width="20%" style="text-align: center"><a href="https://knowledge-representation.org/j.z.pan/" style="border-radius: 50%">Jeff Z. Pan</a><sup>5</sup></td>
                 <td width="20%" style="text-align: center"><a href="https://kfwong.cintec.cuhk.edu.hk/" style="border-radius: 50%">Kam-Fai Wong</a><sup>1</sup></td>
               </tr>
             </table>
@@ -83,8 +84,9 @@
           <div class="is-size-6 publication-authors">
             <span class="author-block"><sup>1</sup>The Chinese University of Hong Kong,</span>
             <span class="author-block"><sup>2</sup>Tsinghua University</span>
-            <span class="author-block"><sup>3</sup>Renmin University of China</span>
-            <span class="author-block"><sup>4</sup>The University of Edinburgh</span>
+            <span class="author-block"><sup>3</sup>UC Santa Cruz</span>
+            <span class="author-block"><sup>4</sup>Renmin University of China</span>
+            <span class="author-block"><sup>5</sup>The University of Edinburgh</span>
           </div>
           <br />
 
