--- a/services/tools-meet-llm/index.html
+++ b/services/tools-meet-llm/index.html
@@ -84,6 +84,7 @@
   <div class="university-logos">
     <img src="./static/imgs/cuhk.png" alt="CUHK Logo" class="university-logo">
     <img src="./static/imgs/tsinghua.png" alt="Tsinghua University Logo" class="university-logo">
+    <img src="./static/imgs/ucsc.png" alt="UC SC Logo" class="university-logo">
     <img src="./static/imgs/renmin.png" alt="Renmin University Logo" class="university-logo">
     <img src="./static/imgs/uoe.png" alt="University of Edinburgh Logo" class="university-logo">
   </div>
