--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
       <h1>About Me <a href="/cv/hongru_cv.pdf" style="font-size: 20px;">[CV]</a></h1>
 
       
-      <p>I am currently a third-year Ph.D. Candidate at The Chinese University of Hong Kong, very honored and fortunate to be supervised by <a href="http://www.se.cuhk.edu.hk/people/academic-staff/prof-wong-kam-fai/" target="_blank" rel="noopener">Prof. Kam-Fai WONG</a> at The Chinese University of Hong Kong. I obtained my Bachelor's degree and Master's degree from the Communication University of China and The Chinese University of Hong Kong in 2019 and 2020, respectively. I am happy to visit The University of Edinburgh, working closely with <a href="https://knowledge-representation.org/j.z.pan/">Prof. Jeff Z. Pan</a>. Besides that, I am co-founder and organizer of <a href="https://mp.weixin.qq.com/s/_lisgXd2MOaFhl3cz-8znA">NLP Academic Exchange Platform (NICE)</a>, which provide a platform to share and discuss recent progress in NLP. &#x1F4DA;&#x1F4DA;&#x1F4DA;</p>
+      <p>I am currently a third-year Ph.D. Candidate at The Chinese University of Hong Kong, very honored and fortunate to be supervised by <a href="http://www.se.cuhk.edu.hk/people/academic-staff/prof-wong-kam-fai/" target="_blank" rel="noopener">Prof. Kam-Fai WONG</a> at The Chinese University of Hong Kong. I obtained my Bachelor's degree and Master's degree from the Communication University of China and The Chinese University of Hong Kong in 2019 and 2020, respectively. I am happy to visit The University of Edinburgh, working closely with <a href="https://knowledge-representation.org/j.z.pan/">Prof. Jeff Z. Pan</a>. Besides that, I am co-founder and organizer of <a href="https://nice-nlp.github.io/">NLP Academic Exchange Platform (NICE)</a>, which provide a platform to share and discuss recent progress in NLP. &#x1F4DA;&#x1F4DA;&#x1F4DA;</p>
 
 
       <br>
@@ -310,6 +310,8 @@
         </ul>
         
         <!--
+        <p>Jun 2024 <span style="color:red">[NEW]</span> TPE is rejected by CMCL Workshop of ACL 2024.</p>
+        <p>May 2024 <span style="color:red">[NEW]</span> Three Paper (MingConf, Self-DC, TPE) are rejected by ACL 2024. All are first-author.</p>
         <p>Jan 2024 <span style="color:red">[NEW]</span> One Paper is rejected by ICLR 2024 (my favorite conceptual tools). AGI is delayed.</p>
         <p>Oct 2023 <span style="color:red">[NEW]</span> One Paper is rejected by EMNLP 2023 ((M3Sum) and another one is withdrawn from EMNLP 2023 (InDust). </p>
         <p>Sep 2023 <span style="color:red">[NEW]</span> Two Papers are rejected by AACL 2023 incuding 2 first-author papers (in-consistent and universal retrieval)</p>
