--- a/services/tools-meet-llm/index.html
+++ b/services/tools-meet-llm/index.html
@@ -151,12 +151,12 @@
           </thead>
           <tbody>
             <tr>
-              <td class="tg-0lax">14:00—14:15</td>
+              <td class="tg-0lax">13:30—13:45</td>
               <td class="tg-0lax">Section 1: Introduction</td>
               <td class="tg-0lax">Hongru Wang</td>
             </tr>
             <tr>
-              <td class="tg-0lax">14:15—14:25</td>
+              <td class="tg-0lax">13:45—14:30</td>
               <td class="tg-0lax">Section 2: Foundations of Tool Learning</td>
               <td class="tg-0lax">Hongru Wang</td>
             </tr>
@@ -171,7 +171,7 @@
               <td class="tg-0lax"></td>
             </tr>
             <tr>
-              <td class="tg-0lax">14:25—15:00</td>
+              <td class="tg-0lax">14:30—15:00</td>
               <td class="tg-0lax">Section 3: Tool Learning based on LLMs</td>
               <td class="tg-0lax">Yujia Qin</td>
             </tr>
@@ -191,7 +191,12 @@
               <td class="tg-0lax"></td>
             </tr>
             <tr>
-              <td class="tg-0lax">15:00—15:25</td>
+              <td class="tg-0lax">15:00—15:30</td>
+              <td class="tg-0lax">Coffee break</td>
+              <td class="tg-0lax"></td>
+            </tr>
+            <tr>
+              <td class="tg-0lax">15:30—16:00</td>
               <td class="tg-0lax">Section 4: Application of Tool Learning</td>
               <td class="tg-0lax">Diji Yang</td>
             </tr>
@@ -210,18 +215,13 @@
               <td class="tg-0lax">Section 4.3: Tool Learning in Embodied Environment</td>
               <td class="tg-0lax"></td>
             </tr>
-            <tr>
-              <td class="tg-0lax">15:25—15:30</td>
+           <!--  <tr>
+              <td class="tg-0lax">16:00-17:00</td>
               <td class="tg-0lax">Q & A Session I</td>
               <td class="tg-0lax"></td>
-            </tr>
+            </tr> -->
             <tr>
-              <td class="tg-0lax">15:30—16:00</td>
-              <td class="tg-0lax">Coffee break</td>
-              <td class="tg-0lax"></td>
-            </tr>
-            <tr>
-              <td class="tg-0lax">16:00—16:25</td>
+              <td class="tg-0lax">16:00-17:45</td>
               <td class="tg-0lax">Section 5: Advanced Topics and Future Directions</td>
               <td class="tg-0lax">Hongru Wang</td>
             </tr>
@@ -241,15 +241,15 @@
               <td class="tg-0lax"></td>
             </tr>
             <tr>
-              <td class="tg-0lax">17:10—17:20</td>
+              <td class="tg-0lax">17:45—18:00</td>
               <td class="tg-0lax">Section 6: Summary and Overlook</td>
               <td class="tg-0lax">Hongru Wang</td>
             </tr>
-            <tr>
+            <!-- <tr>
               <td class="tg-0lax">17:20—17:30</td>
               <td class="tg-0lax">Q & A Session II</td>
               <td class="tg-0lax"></td>
-            </tr>
+            </tr> -->
           </tbody>
           </table>
         </div>
