--- a/services/tools-meet-llm/index.html
+++ b/services/tools-meet-llm/index.html
@@ -187,7 +187,7 @@
             </tr>
             <tr>
               <td class="tg-0lax"></td>
-              <td class="tg-0lax">Section 3.3: "Learning" of Tool Learning [Toolformer] [ToolLLM]</td>
+              <td class="tg-0lax">Section 3.3: "Learning" of Tool Learning</td>
               <td class="tg-0lax"></td>
             </tr>
             <tr>
@@ -221,7 +221,7 @@
               <td class="tg-0lax"></td>
             </tr> -->
             <tr>
-              <td class="tg-0lax">16:00-17:45</td>
+              <td class="tg-0lax">16:00-16:45</td>
               <td class="tg-0lax">Section 5: Advanced Topics and Future Directions</td>
               <td class="tg-0lax">Hongru Wang</td>
             </tr>
@@ -241,7 +241,7 @@
               <td class="tg-0lax"></td>
             </tr>
             <tr>
-              <td class="tg-0lax">17:45—18:00</td>
+              <td class="tg-0lax">16:45—17:00</td>
               <td class="tg-0lax">Section 6: Summary and Overlook</td>
               <td class="tg-0lax">Hongru Wang</td>
             </tr>
