--- a/services/tools-meet-llm/index.html
+++ b/services/tools-meet-llm/index.html
@@ -153,7 +153,7 @@
             <tr>
               <td class="tg-0lax">13:30—13:45</td>
               <td class="tg-0lax">Section 1: Introduction</td>
-              <td class="tg-0lax">Hongru Wang</td>
+              <td class="tg-0lax">Diji Yang</td>
             </tr>
             <tr>
               <td class="tg-0lax">13:45—14:30</td>
