--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
           
           <br>
 
-          <li><strong>Language Agents</strong>: More broadly, I believe dialogue will be the entrance of next human-ai interaction, similar like human beings. To this end, I also focus other aspects of diague agents, including but not limited to safety (<a href="https://arxiv.org/abs/2305.13733.pdf">INDust</a>, <a href="https://arxiv.org/abs/2310.15851.pdf">Self-Guard</a>), role-playing (<a href="https://arxiv.org/abs/2403.02756.pdf">REGA</a>), memory, factuality (<a href="https://aclanthology.org/2023.findings-emnlp.525.pdf">K-Dial</a>) and proactivity (<a href="https://aclanthology.org/2023.findings-emnlp.711.pdf">Pro-CoT</a>). </li>
+          <li><strong>Language Agents</strong>: More broadly, I believe dialogue will be the entrance of next human-ai interaction, similar like human beings. To this end, I also focus other aspects of diague agents, including but not limited to safety (<a href="https://arxiv.org/abs/2305.13733.pdf">INDust</a>, <a href="https://arxiv.org/abs/2310.15851.pdf">Self-Guard</a>), role-playing (<a href="https://arxiv.org/abs/2403.02756.pdf">REGA</a>), memory (<a href="https://arxiv.org/abs/2402.16288.pdf">PerLTQA</a>), factuality (<a href="https://aclanthology.org/2023.findings-emnlp.525.pdf">K-Dial</a>) and proactivity (<a href="https://aclanthology.org/2023.findings-emnlp.711.pdf">Pro-CoT</a>). </li>
 
         </ul>
       </div>
