--- a/services/tools-meet-llm/index.html
+++ b/services/tools-meet-llm/index.html
@@ -284,7 +284,7 @@
 <section id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>@@inproceedings{toolmeetllm,
+    <pre><code>@inproceedings{toolmeetllm,
         author = {Wang, Hongru and Qin, Yujia and Lin, Yankai and Pan, Jeff Z. and Wong, Kam-Fai},
         title = {Empowering Large Language Models: Tool Learning for Real-World Interaction},
         year = {2024},
