--- a/index.html
+++ b/index.html
@@ -350,6 +350,15 @@
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+          <a href="https://dl.acm.org/doi/10.1145/3626772.3661381">Empowering Large Language Models: Tool Learning for Real-World Interaction</a> 
+          <img src="https://img.shields.io/badge/LLM-orange">
+          <img src="https://img.shields.io/badge/Tool_Learning-violet"> <br>
+          <span class="author_list"><strong>Hongru WANG</strong>, Yujia Qin, Yankai Lin, Jeff Z. Pan and Kam-Fai Wong</span><br>
+          <span><i>Tutorial, SIGIR 2024</i></span> (first comprehensive tutorial about tool learning)
+        </div>
+
+        <div class="pub-list-item" style="margin-bottom: 1rem">
+          <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
           <a href="https://arxiv.org/abs/2305.13733.pdf">Enhancing Large Language Models Against Inductive Instructions with Dual-critique Prompting</a> 
           <img src="https://img.shields.io/badge/LLM-orange">
           <img src="https://img.shields.io/badge/Safety-red"> <br>
@@ -608,6 +617,9 @@
   
       <div class="col-12 col-lg-9">
         <ul>
+          <li>Overseas Research Attachment Programme (ORAP 2023-2024)</li>
+          <li>Technology and Business Development Fund (TBF22ENG004)</li>
+          <li>Top 1 at Online Safety Price organized by AI Singapore (WWW 2024)</li>
           <li>Top 10 at ICLR 2021 Workshop MLPCP Track 1 (rank 7th) </li>
           <li>Third Price at SMP2020-ECDT Few-shot Spoken Language Understanding </li>
           <li>Top 10 at SemEval2020-Task4: CommonSense Detection and Explanations </li>
