--- a/publication/index.html
+++ b/publication/index.html
@@ -401,6 +401,36 @@
             </div>
         </div>
 
+        <div class="universal-wrapper pt-3">
+            <h2>
+                <li>Workshop, Tutorial and Others</li>
+            </h2>
+        </div>
+
+        <div class="universal-wrapper">
+            <div class="row">
+                <div class="col-lg-12">
+                        <div class="pub-list-item" style="margin-bottom: 1rem">
+                          <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+                          <a href="https://arxiv.org/pdf/2402.16288v1.pdf">PerLTQA: A Personal Long-Term Memory Dataset for Memory Classification, Retrieval, and Fusion in Question Answering</a> 
+                          <img src="https://img.shields.io/badge/LLM-orange">
+                          <span class="author_list">Yiming Du, <strong>Hongru WANG</strong>, Zhengyi Zhao, Bin Liang, Baojun Wang, Wanjun Zhong, Zezhong Wang, and Kam-Fai Wong</span><br>
+                          <span><i>SIGHAN, ACL 2024</i></span>
+                        </div>
+
+
+                        <div class="pub-list-item" style="margin-bottom: 1rem">
+                          <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+                          <a href="https://dl.acm.org/doi/10.1145/3626772.3661381">Empowering Large Language Models: Tool Learning for Real-World Interaction</a> 
+                          <img src="https://img.shields.io/badge/LLM-orange">
+                          <img src="https://img.shields.io/badge/Tool_Learning-violet"> <br>
+                          <span class="author_list"><strong>Hongru WANG</strong>, Yujia Qin, Yankai Lin, Jeff Z. Pan and Kam-Fai Wong</span><br>
+                          <span><i>Tutorial, SIGIR 2024</i></span> (first comprehensive tutorial about tool learning)
+                        </div>
+                </div>
+            </div>
+        </div>
+
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.min.js" integrity="sha256-lqvxZrPLtfffUl2G/e7szqSvPBILGbwmsGE1MKlOi0Q=" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.isotope/3.0.6/isotope.pkgd.min.js" integrity="sha256-CBrpuqrMhXwcLLUd5tvQ4euBHCdh7wGlDfNz8vbu/iI=" crossorigin="anonymous"></script>
