--- a/publication/index.html
+++ b/publication/index.html
@@ -413,7 +413,7 @@
                         <div class="pub-list-item" style="margin-bottom: 1rem">
                           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
                           <a href="https://arxiv.org/pdf/2402.16288v1.pdf">PerLTQA: A Personal Long-Term Memory Dataset for Memory Classification, Retrieval, and Fusion in Question Answering</a> 
-                          <img src="https://img.shields.io/badge/LLM-orange">
+                          <img src="https://img.shields.io/badge/LLM-orange"> <br>
                           <span class="author_list">Yiming Du, <strong>Hongru WANG</strong>, Zhengyi Zhao, Bin Liang, Baojun Wang, Wanjun Zhong, Zezhong Wang, and Kam-Fai Wong</span><br>
                           <span><i>SIGHAN, ACL 2024</i></span>
                         </div>
