--- a/index.html
+++ b/index.html
@@ -709,7 +709,7 @@
       
       <li>
         <i class="fa-li fas fa-envelope fa-2x" aria-hidden="true"></i>
-        <span>You can find me in wechat amount: 地球漫游必备手册 -> 慧用智能 </span>
+        <span>You can find me in wechat public account: 地球漫游必备手册 -> 慧用智能 </span>
       </li>
       
       <li>
