--- a/talk/index.html
+++ b/talk/index.html
@@ -132,9 +132,10 @@
                 <div class="col-lg-12">
 
                     <ul>
-                        <!-- <li>A Survey of Evolution of LM-based Dialogue System</li>
+                        <li>Integrating Internal Reasoning and External Acting for Personalized Dialogue Agent</li>
                         <ul>
-                        </ul> -->
+                            <li>EdinburghNLP, Aug 2024</li>
+                        </ul>
                     </ul>
                 
                 </div>
