--- a/index.html
+++ b/index.html
@@ -293,6 +293,9 @@
       <div class="col-12 col-lg-9">
 
         <ul>
+          <li>Aug 2024: One paper is accepted by <em>NLPCC 2024</em>, see u at Hangzhou, a very nice and beautiful place. </li>
+
+
           <li>May 2024: Two papers are accepted by <em>ACL 2024</em>, But non-first authors. Sad story, should work harder. </li>
 
           <li>May 2024: We won the champion of <a href="https://ospc.aisingapore.org/">Online Safety Prize Challenge organized by AI singapore</a> <img src="images/trophy.png" width="15" height="15"> </li>
@@ -347,6 +350,15 @@
           </div>
         </div>
       -->
+
+        <div class="pub-list-item" style="margin-bottom: 1rem">
+          <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+          <a href="https://arxiv.org/pdf/2309.16090.pdf">TPE: Towards Better Compositional Reasoning over Conceptual Tools with Multi-persona Collaboration</a> 
+          <img src="https://img.shields.io/badge/LLM-orange">
+          <img src="https://img.shields.io/badge/Tool_Learning-violet"> <br>
+          <span class="author_list"><strong>Hongru WANG</strong>, Huimin Wang, Lingzhi Wang, Minda Hu, Rui Wang, Boyang XUE, Yongfeng Huang, Kam-Fai Wong </span> <br>
+          <span><i>NLPCC 2024</i></span> (first work to utilize cognitive/conceptual tool in dialogue agent)
+        </div>
 
         <div class="pub-list-item" style="margin-bottom: 1rem">
           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
@@ -491,23 +503,6 @@
           <img src="https://img.shields.io/badge/LLM-orange"> <br>
           <span class="author_list"><strong>Hongru Wang</strong>, Lingzhi Wang, Yiming Du, Liang Chen, Jingyan Zhou, Yufei Wang, Kam-Fai Wong </span> <br>
           <span> Under Review </span>
-        </div>
-
-        <div class="pub-list-item" style="margin-bottom: 1rem">
-          <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-          <a href="https://arxiv.org/pdf/2309.16090.pdf">TPE: Towards Better Compositional Reasoning over Conceptual Tools with Multi-persona Collaboration (2023) </a> 
-          <img src="https://img.shields.io/badge/Tool_Learning-violet"> <br>
-          <span class="author_list"><strong>Hongru WANG</strong>, Huimin Wang, Lingzhi Wang, Minda Hu, Rui Wang, Boyang XUE, Hongyuan Lu, Fei Mi, Kam-Fai Wong </span> <br>
-          <span> Under Review </span> <strong style="color:red"> (Most favorite motivation) </strong> 
-          
-          <!-- <p>
-            <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://arxiv.org/abs/2011.08772" target="_blank" rel="noopener">
-              Preprint
-            </a>
-            <a class="btn btn-outline-info my-1 mr-1 btn-sm" href="https://github.com/ruleGreen/KddRES" target="_blank" rel="noopener">
-              Code
-            </a>
-          </p> -->
         </div>
 
       </div>
