--- a/publication/index.html
+++ b/publication/index.html
@@ -168,12 +168,12 @@
 
                     <div class="pub-list-item" style="margin-bottom: 1rem">
                       <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
-                      <a href="">OSPC: Detecting Harmful Memes with Large Language Model as a Catalyst</a> 
-                      <img src="https://img.shields.io/badge/LLM-orange"><br>
-                      <span class="author_list">Jingtao Cao, Zheng Zhang, <strong>Hongru WANG</strong>, Bin Liang, Hao Wang, Kam-fai Wong </span><br>
-                      <span><i>Online Safety Prize Challenge Champion, WWW 2024</i></span>
+                      <a href="https://arxiv.org/pdf/2309.16090.pdf">TPE: Towards Better Compositional Reasoning over Conceptual Tools with Multi-persona Collaboration</a> 
+                      <img src="https://img.shields.io/badge/LLM-orange">
+                      <img src="https://img.shields.io/badge/Tool_Learning-violet"> <br>
+                      <span class="author_list"><strong>Hongru WANG</strong>, Huimin Wang, Lingzhi Wang, Minda Hu, Rui Wang, Boyang XUE, Yongfeng Huang, Kam-Fai Wong </span> <br>
+                      <span><i>NLPCC 2024</i></span> (first work to utilize cognitive/conceptual tool in dialogue agent)
                     </div>
-
 
                     <div class="pub-list-item" style="margin-bottom: 1rem">
                       <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
@@ -412,10 +412,27 @@
                 <div class="col-lg-12">
                         <div class="pub-list-item" style="margin-bottom: 1rem">
                           <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+                          <a href=""> Fine-tuning after Prompting: an Explainable Way for Classification</a> 
+                          <img src="https://img.shields.io/badge/LLM-orange"> <br>
+                          <span class="author_list">Zezhong Wang, Luyao Ye, <strong>Hongru WANG</strong>, Boyang Xue, Yiming Du, Bin Liang, and Kam-Fai Wong</span><br>
+                          <span><i>SIGHAN, ACL 2024</i></span>
+                        </div>
+
+
+                        <div class="pub-list-item" style="margin-bottom: 1rem">
+                          <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
                           <a href="https://arxiv.org/pdf/2402.16288v1.pdf">PerLTQA: A Personal Long-Term Memory Dataset for Memory Classification, Retrieval, and Fusion in Question Answering</a> 
                           <img src="https://img.shields.io/badge/LLM-orange"> <br>
                           <span class="author_list">Yiming Du, <strong>Hongru WANG</strong>, Zhengyi Zhao, Bin Liang, Baojun Wang, Wanjun Zhong, Zezhong Wang, and Kam-Fai Wong</span><br>
                           <span><i>SIGHAN, ACL 2024</i></span>
+                        </div>
+
+                        <div class="pub-list-item" style="margin-bottom: 1rem">
+                          <i class="far fa-file-alt pub-icon" aria-hidden="true"></i>
+                          <a href="">OSPC: Detecting Harmful Memes with Large Language Model as a Catalyst</a> 
+                          <img src="https://img.shields.io/badge/LLM-orange"><br>
+                          <span class="author_list">Jingtao Cao, Zheng Zhang, <strong>Hongru WANG</strong>, Bin Liang, Hao Wang, Kam-fai Wong </span><br>
+                          <span><i>Online Safety Prize Challenge Champion, WWW 2024</i></span>
                         </div>
 
 
