--- a/resources/index.html
+++ b/resources/index.html
@@ -123,6 +123,24 @@
 
         <div class="universal-wrapper pt-3">
             <h2>
+                <li>Tutorial</li>
+            </h2>
+        </div>
+
+        <div class="universal-wrapper">
+            <div class="row">
+                <div class="col-lg-12">
+
+                    <ul>
+                        <li><a href="https://rulegreen.github.io/services/tools-meet-llm/">Empowering Large Language Models: Tool Learning for Real-World Interaction</a> (SIGIR 2024) </li>
+                    </ul>
+                
+                </div>
+            </div>
+        </div>
+
+        <div class="universal-wrapper pt-3">
+            <h2>
                 <li>Github Repos</li>
             </h2>
         </div>
