--- a/index.html
+++ b/index.html
@@ -214,12 +214,12 @@
       <h1>About Me <a href="/cv/hongru_cv.pdf" style="font-size: 20px;">[CV]</a></h1>
 
       
-      <p>I am currently a third-year Ph.D. Candidate at The Chinese University of Hong Kong, very honored and fortunate to be supervised by <a href="http://www.se.cuhk.edu.hk/people/academic-staff/prof-wong-kam-fai/" target="_blank" rel="noopener">Prof. Kam-Fai WONG</a> at The Chinese University of Hong Kong. I obtained my Bachelor's degree and Master's degree from the Communication University of China and The Chinese University of Hong Kong in 2019 and 2020, respectively. I am happy to visit The University of Edinburgh (EdinburghNLP), working closely with <a href="https://knowledge-representation.org/j.z.pan/">Prof. Jeff Z. Pan</a>. Besides that, I am co-founder and organizer of <a href="https://nice-nlp.github.io/">NLP Academic Exchange Platform (NICE)</a>, which provide a platform to share and discuss recent progress in NLP. &#x1F4DA;&#x1F4DA;&#x1F4DA;</p>
+      <p>I am currently a final-year Ph.D. Candidate at The Chinese University of Hong Kong, very honored and fortunate to be supervised by <a href="http://www.se.cuhk.edu.hk/people/academic-staff/prof-wong-kam-fai/" target="_blank" rel="noopener">Prof. Kam-Fai WONG</a>. Before that, I obtained my Bachelor's degree and Master's degree from the Communication University of China and The Chinese University of Hong Kong in 2019 and 2020, respectively. I am happy to visit The University of Edinburgh (EdinburghNLP), working closely with <a href="https://knowledge-representation.org/j.z.pan/">Prof. Jeff Z. Pan</a> and <a href="https://scholar.google.it/citations?user=9sk6CSgAAAAJ&hl=it">Prof. Pasquale Minervini</a>. Besides that, I am co-founder and organizer of <a href="https://nice-nlp.github.io/">NLP Academic Exchange Platform (NICE)</a>, which provide a platform to share and discuss recent progress in NLP. &#x1F4DA;&#x1F4DA;&#x1F4DA;</p>
 
 
       <br>
 
-      <p>My research focus revolves around advancing intelligent dialogue systems, or personalized language agents, designed to seamlessly address a diverse array of user needs using different tools instead of treat them in isolation. More details can be found below.</p>
+      <p>My research focus revolves around advancing intelligent dialogue systems, or personalized language agents, designed to seamlessly address a diverse array of user needs using different tools (cognitive tools and physical tools) instead of treat them in isolation. More details can be found below.</p>
 
 
       <br>
@@ -313,6 +313,7 @@
         </ul>
         
         <!--
+        <p>Aug 2024 <span style="color:red">[NEW]</span> DialogBench is withdrawn from D&B track of NeurIPS 2024.</p>
         <p>Jun 2024 <span style="color:red">[NEW]</span> TPE is rejected by CMCL Workshop of ACL 2024.</p>
         <p>May 2024 <span style="color:red">[NEW]</span> Three Paper (MingConf, Self-DC, TPE) are rejected by ACL 2024. All are first-author.</p>
         <p>Jan 2024 <span style="color:red">[NEW]</span> One Paper is rejected by ICLR 2024 (my favorite conceptual tools). AGI is delayed.</p>
