--- a/resources/index.html
+++ b/resources/index.html
@@ -74,6 +74,10 @@
                 <div class="navbar-collapse main-menu-item collapse justify-content-start" id="navbar-content">
                     <ul class="navbar-nav d-md-inline-flex">
                         <li class="nav-item">
+                          <a class="nav-link " href="https://rulegreen.github.io/news/" data-target="#contact"><span>News</span></a>
+                        </li>
+
+                        <li class="nav-item">
                           <a class="nav-link " href="https://rulegreen.github.io/publication/" data-target="#contact"><span>Publications</span></a>
                         </li>
 
@@ -87,10 +91,6 @@
 
                         <li class="nav-item">
                           <a class="nav-link " href="https://rulegreen.github.io/resources/"><span>Resources</span></a>
-                        </li>
-
-                        <li class="nav-item">
-                          <a class="nav-link " href="/#contact" data-target="#contact"><span>Contact</span></a>
                         </li>
                     </ul>
                 </div>
