--- a/index.html
+++ b/index.html
@@ -217,24 +217,18 @@
       <p>I am currently a final-year Ph.D. Candidate at The Chinese University of Hong Kong, very honored and fortunate to be supervised by <a href="http://www.se.cuhk.edu.hk/people/academic-staff/prof-wong-kam-fai/" target="_blank" rel="noopener">Prof. Kam-Fai WONG</a>. Before that, I obtained my Bachelor's degree and Master's degree from the Communication University of China and The Chinese University of Hong Kong in 2019 and 2020, respectively. During my PhD, I am happy and honored to visit The University of Edinburgh (EdinburghNLP), working closely with <a href="https://knowledge-representation.org/j.z.pan/">Prof. Jeff Z. Pan</a> and <a href="https://scholar.google.it/citations?user=9sk6CSgAAAAJ&hl=it">Prof. Pasquale Minervini</a>. Besides that, I am co-founder and organizer of <a href="https://nice-nlp.github.io/">NLP Academic Exchange Platform (NICE)</a>, which provide a platform to share and discuss recent progress in NLP. &#x1F4DA;&#x1F4DA;&#x1F4DA;</p>
 
 
-      <br>
+      <!-- <br> -->
 
-      <p>My research focus revolves around advancing intelligent dialogue systems, or personalized language agents, designed to seamlessly address a diverse array of user needs using different tools (cognitive tools and physical tools) instead of treat them in isolation. More details can be found below.</p>
-
-
-      <br>
-
-      If you are interested in my research, I dedicate 60 minutes per week to chat with persons from all over the world, feel free to say hi if you want to discuss or cooperate. &#128198;&#128198;&#128198;
+      <p>My research focus revolves around reasoning and acting of personalized language agents, designed to seamlessly unifing them from tool perspective such as regarding reasoning as internal cognitive tools while acting as external physical tools instead of treat them in isolation. If you are interested in my research (more details can be found below), I dedicate 60 minutes per week to chat with persons from all over the world, feel free to say hi if you want to discuss or cooperate.
 
       <!-- Calendly link widget begin -->
       <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
       <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
-      <a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/hongru-carrywang'});return false;">Schedule meeting with me!</a>
+      <a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/hongru-carrywang'});return false;"> Schedule meeting with me! &#128198;</a>
 
-      <br>
-      <br>
+      </p>
       
-      <p style="color: red;">I am on track to graduate in July 2025. I'm actively seeking opportunities as a research scientist or postdoc / academic positions. Welcome to discuss about any potential opportunities. Please don't hesitate to reach out!</p>
+      <p style="color: red;">I am on track to graduate in July 2025. I'm actively seeking opportunities as a research scientist (at the end of year or next year) or postdoc / academic positions (in the progress). Welcome to discuss about any potential opportunities. Please don't hesitate to reach out!</p>
       <!-- Calendly link widget end -->
       
       <!-- <div class="row" style="margin-top:20px;">
@@ -298,7 +292,7 @@
 
           <li>May 2024: Two papers are accepted by <em>ACL 2024</em>, But non-first authors. Sad story, should work harder. </li>
 
-          <li>May 2024: We won the champion of <a href="https://ospc.aisingapore.org/">Online Safety Prize Challenge organized by AI singapore</a> <img src="images/trophy.png" width="15" height="15"> </li>
+          <li>May 2024: We won the champion of <a href="https://ospc.aisingapore.org/">Online Safety Prize Challenge organized by AI singapore</a> <img src="images/trophy.png" width="15" height="15"> <a href="./documents/certificate.pdf">[My Certification]</a></li>
 
           <li>Apr 2024: We are about to organize the SIGIR 2024 tutorial: <a href="https://rulegreen.github.io/services/tools-meet-llm/">Empowering Large Language Models: Tool Learning for Real-World Interaction</a> &#128525; </li>
 
