--- a/index.html
+++ b/index.html
@@ -219,14 +219,18 @@
 
       <!-- <br> -->
 
-      <p>My research focus revolves around reasoning and acting of personalized language agents, designed to seamlessly unifing them from tool perspective such as regarding reasoning as internal cognitive tools while acting as external physical tools instead of treat them in isolation. If you are interested in my research (more details can be found below), I dedicate 60 minutes per week to chat with persons from all over the world, feel free to say hi if you want to discuss or cooperate.
+      <blockquote>
 
-      <!-- Calendly link widget begin -->
-      <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
-      <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
-      <a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/hongru-carrywang'});return false;"> Schedule meeting with me! &#128198;</a>
+        My research focus revolves around reasoning and acting of personalized language agents, designed to seamlessly unifing them from tool perspective such as regarding reasoning as internal cognitive tools while acting as external physical tools instead of treat them in isolation. If you are interested in my research (more details can be found below), I dedicate 60 minutes per week to chat with persons from all over the world, feel free to say hi if you want to discuss or cooperate.
 
-      </p>
+        <!-- Calendly link widget begin -->
+        <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+        <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+        <a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/hongru-carrywang'});return false;"> Schedule meeting with me! &#128198;</a>
+
+      </blockquote>
+      
+      <br>
       
       <p style="color: red;">I am on track to graduate in July 2025. I'm actively seeking opportunities as a research scientist (at the end of year or next year) or postdoc / academic positions (in the progress). Welcome to discuss about any potential opportunities. Please don't hesitate to reach out!</p>
       <!-- Calendly link widget end -->
