--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
   
       <div class="col-12 col-lg-9">
         <ul>
-          <li>2020/03-2021/09, Research Assistant, <strong>CUHK</strong>, Dialogue System and Few Shot Learning at MoE Key Lab of High Conﬁdence Software Technologies</li>
+          <li>2020/08-2021/09, Research Assistant, <strong>CUHK</strong>, Dialogue System and Few Shot Learning at MoE Key Lab of High Conﬁdence Software Technologies</li>
           <li>2019/04-2019/07, Recommendation System Intern, <strong>Kuaishou</strong>, Music and Video Recommendation</li>
           <li>2018/07-2018/10, Data Analysis Intern, <strong>360 Finance</strong>, Data Analysis, Weekly and Monthly Report</li>
         </ul>
@@ -616,6 +616,7 @@
           <li>Top 1 at Online Safety Price organized by AI Singapore (WWW 2024)</li>
           <li>Top 10 at ICLR 2021 Workshop MLPCP Track 1 (rank 7th) </li>
           <li>Third Price at SMP2020-ECDT Few-shot Spoken Language Understanding </li>
+          <li>Distinguished Academic Performance Scholarship (2019-2020), CUHK CSE</li>
           <li>Top 10 at SemEval2020-Task4: CommonSense Detection and Explanations </li>
           <li>Meritorious Winner, Mathematical Contest In Modeling(2018) </li>
           <li>A software copyright of “WeCampus WeChat mini-program”(2018SR562540) </li>
