update more 12th Sep, 2024

--- a/index.html
+++ b/index.html
@@ -311,6 +311,7 @@
         </ul>
         
         <!--
+        <p>Sep 2024 <span style="color:red">[NEW]</span> UniMS-RAG is rejected by TOIS afer RR and one year.</p>
         <p>Aug 2024 <span style="color:red">[NEW]</span> DialogBench is withdrawn from D&B track of NeurIPS 2024.</p>
         <p>Jun 2024 <span style="color:red">[NEW]</span> TPE is rejected by CMCL Workshop of ACL 2024.</p>
         <p>May 2024 <span style="color:red">[NEW]</span> Three Paper (MingConf, Self-DC, TPE) are rejected by ACL 2024. All are first-author.</p>
