update more 12th Sep, 2024

--- a/publication/index.html
+++ b/publication/index.html
@@ -475,7 +475,7 @@
               const details = btn.nextElementSibling;
               details.style.display = isAllOpen ? 'block' : 'none';
             });
-            toggleAllBtn.textContent = isAllOpen ? 'Show All' : 'Hide All';
+            toggleAllBtn.textContent = isAllOpen ? 'Hide All' : 'Show All';
           });
 
           const twentytree_toggleBtns = document.querySelectorAll('.twentythree-toggle-btn');
